Fix bug #47145 - As soon as sqlite3_step is called on a statement it always must be finalised.